--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                 </div>
             </div>
         </div>
+        <div class="creator">
+            <a href="https://www.freepik.com">Designed by Freepik</a>
+            <a href="https://github.com/Wilawan-Watt/Pizza">Coding HTML and CSS by Wilawan Wattnanukit</a>
+        </div>
     </footer>
 <!-- footer end -->
 
